WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12603
A crash when trying to use XPath functions normalize-space() and string-length()
https://bugs.webkit.org/show_bug.cgi?id=12603
Summary
A crash when trying to use XPath functions normalize-space() and string-length()
Alexey Proskuryakov
Reported
2007-02-04 11:46:44 PST
That's the punishment for using a manually written tokenizer!
Attachments
test case
(875 bytes, text/html)
2007-02-04 11:48 PST
,
Alexey Proskuryakov
no flags
Details
proposed fix
(5.24 KB, patch)
2007-02-07 10:52 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-02-04 11:48:02 PST
Created
attachment 12921
[details]
test case This test is also used for
bug 12602
(with two offending cases commented out).
Maciej Stachowiak
Comment 2
2007-02-06 23:25:23 PST
<
rdar://problem/4980996
>
Alexey Proskuryakov
Comment 3
2007-02-07 10:43:51 PST
Actually, the tokenizer is OK - it's just another problem with implicit arguments in these functions (and in number()).
Alexey Proskuryakov
Comment 4
2007-02-07 10:52:07 PST
Created
attachment 13011
[details]
proposed fix
mitz
Comment 5
2007-02-07 10:56:00 PST
Per the style guidelines, + if (argCount() == 0) should be rewritten as + if (!argCount())
Darin Adler
Comment 6
2007-02-07 11:02:19 PST
Comment on
attachment 13011
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 7
2007-02-07 11:08:19 PST
Committed revision 19467. (In reply to
comment #5
)
> Per the style guidelines,
Fixed here and in several other places in the file. /me stabs this guideline.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug