        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12603
        A crash when trying to use XPath functions normalize-space(), string-length() and number()

        Test: fast/xpath/implicit-node-args.html

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunNumber::doEvaluate): Implemented zero parameter case.
        (WebCore::XPath::FunctionMapping::): Corrected descriptions of these functions, as they
        do allow zero parameters.
        (WebCore::XPath::createFunction): Combined the two failure cases to ensure that this
        function never returns 0.



Canonical link: https://commits.webkit.org/16362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19467 268f45cc-cd09-0410-ab3c-d52691b4dbfc